# SpaceBud1885

./: .editorconfig  .prettierignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
src/: app.css
src/components/: Game.svelte
src/invaderz/: .gitignore  Cargo.toml  index.html
src/invaderz/pkg/: README.md  invaderz.d.ts  invaderz.js  invaderz_bg.wasm.d.ts  package.json
src/invaderz/src/: lib.rs  player.rs
src/routes/: +page.svelte
static/: assets
