[package]
name = "invaderz"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.9"
rand = "0.8"
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
